--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 	</script>
 </head>
 <body>
+    <section class="ad-banner">
+        <a href="https://darrad11.github.io/puzzlequeststore/" target="_blank">
+            <img src="./images/ad-image.jpg" alt="Ad Banner">
+        </a>
+    </section>
     <header>
 		<div class="logo">
 			<a href="https://darrad11.github.io/puzzlequeststore/">
