--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 			<!-- list of products -->
 		</div>
 	</section>
+	<section>
+		
+	</section>
 	<footer>
 		<div class="footer-container">
 			<div class="footer-section about">
