Update index.html 3 korzysci i cechy

--- a/index.html
+++ b/index.html
@@ -79,8 +79,31 @@
 		</div>
 	</section>
 	<section>
-		
-	</section>
+    <h2>Cechy i korzyści Puzzle Quest Store</h2>
+    <table style="width: 100%; border-collapse: collapse; text-align: left;">
+        <thead>
+            <tr>
+                <th style="border: 1px solid #ddd; padding: 8px;">Cechy</th>
+                <th style="border: 1px solid #ddd; padding: 8px;">Korzyści</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Interaktywność: Intuicyjny interfejs użytkownika pozwala na łatwe przeglądanie i zakupy.</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Szybkie zakupy: Możliwość szybkiego znalezienia i kupienia ulubionych gier.</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Estetyka: Nowoczesny, atrakcyjny design dostosowany do tematyki gier.</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Wygoda: Prosta nawigacja oszczędzająca czas użytkownika.</td>
+            </tr>
+            <tr>
+                <td style="border: 1px solid #ddd; padding: 8px;">Responsywność: Strona działa poprawnie na urządzeniach mobilnych, tabletach i komputerach.</td>
+                <td style="border: 1px solid #ddd; padding: 8px;">Zaufanie: Transparentne informacje o produktach i bezpieczne płatności.</td>
+            </tr>
+        </tbody>
+    </table>
+</section>
+
 	<footer>
 		<div class="footer-container">
 			<div class="footer-section about">
