--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<!-- list of products -->
 		</div>
 	</section>
-	
+	<div class="section-divider"></div>
 	<section>
 		<h2>Features and Benefits of Puzzle Quest Store</h2>
 		<table style="width: 100%; border-collapse: collapse; text-align: left;">
