--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 	<section id="social-proof">
 		<h2>Our Credibility</h2>
 		<div class="logos">
-			<div></div>
+			<div style="margin-bottom: 10px;"></div>
 			<h3>Affiliations</h3>
 			<img src="./images/logo1.png" alt="Association Logo 1">
 			<img src="./images/logo2.png" alt="Association Logo 2">
@@ -133,13 +133,13 @@
 		</div>
 
 		<div class="about-seller">
-			<div></div>
+			<div style="margin-bottom: 10px;"></div>
 			<h3>Who We Are</h3>
 			<p>Led by <strong>Karol Zmyślony</strong>, a passionate advocate for games and puzzles, our store combines experience and enthusiasm to deliver the best products for our customers.</p>
 		</div>
 
 		<div class="media-mentions">
-			<div></div>
+			<div style="margin-bottom: 10px;"></div>
 			<h3>Featured In</h3>
 			<img src="./images/media1.png" alt="Media Outlet 1">
 			<img src="./images/media2.png" alt="Media Outlet 2">
@@ -147,7 +147,7 @@
 		</div>
 
 		<div class="testimonials">
-			<div></div>
+			<div style="margin-bottom: 10px;"></div>
 			<h3>What Our Customers Say</h3>
 			<blockquote>
 				<p>"The puzzles are top-notch, and delivery was super fast! Highly recommend." - <em>Anna Kowalska</em></p>
@@ -158,7 +158,7 @@
 		</div>
 
 		<div class="mission-vision">
-			<div></div>
+			<div style="margin-bottom: 10px;"></div>
 			<h3>Our Mission and Vision</h3>
 			<p><strong>Mission:</strong> To inspire creativity and togetherness through exceptional puzzles and games.</p>
 			<p><strong>Vision:</strong> A world where play brings joy and connection to every home.</p>
