--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</div>
 	</section>
 	<div class="section-divider"></div>
-	<section>
+	<section  style="justify-content: center;">
 		<h2>Features and Benefits of Puzzle Quest Store</h2>
 		<table>
 			<thead>
