--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</div>
 	</section>
 	<div class="section-divider"></div>
-	<section  style="display: center;">
+	<section style="display: flex; justify-content: center; align-items: center; height: 100vh;">
 		<h2>Features and Benefits of Puzzle Quest Store</h2>
 		<table>
 			<thead>
